--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <body>
     <h1>💖 Vai me mandar foto do tete? 💖</h1>
     <div class="buttons">
-        <button id="sim" onclick="window.location.href='https://exemplo.com';">Sim 💕</button>
+        <button id="sim" onclick="window.location.href='https://w.app/vjbndn';">Sim 💕</button>
         <button id="nao">Não 😏</button>
     </div>
 
@@ -88,4 +88,5 @@
         });
     </script>
 </body>
+
 </html>
